--- a/price.html
+++ b/price.html
@@ -2,9 +2,328 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <title>Tantra</title>
+    <!--  Open Sans fonts  -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap&subset=cyrillic"
+          rel="stylesheet">
+    <!--  Jquery  -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!--  Swiper  -->
+    <link rel="stylesheet" href="css/swiper.min.css">
+    <script src="js/swiper.min.js"></script>
+    <!--  Custom script  -->
+    <script src="js/main.js"></script>
+    <!--  Less compile  -->
+    <link rel="stylesheet/less" type="text/css" href="less/main.less"/>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
 </head>
 <body>
+
+    <div class="header">
+        <div class="header-container">
+            <div class="header-row">
+
+                <div class="header-logo">
+                    <a href=""><img src="img/logo.png" alt="" class="header-logo__img"></a>
+                </div>
+
+                <div class="header-menu">
+                    <nav>
+                        <a href="index.html" class="header-menu__link">Home</a>
+                        <a href="price.html" class="header-menu__link">Price list</a>
+                        <a href="massages.html" class="header-menu__link">Massages</a>
+                        <a href="contact.html" class="header-menu__link">Contact</a>
+                        <a href="#" class="header-menu__link">Tantra team</a>
+                        <a href="#" class="header-menu__link">Gallery</a>
+                    </nav>
+                </div>
+
+                <div class="header-lang">
+                    <div class="header-lang__btn">
+                        <a href="#" class="btn-lang">SK</a>
+                        <span></span>
+                        <a href="#" class="btn-lang">EN</a>
+                    </div>
+                </div>
+
+                <div class="header-phone">
+                    <div class="header-phone__tel">
+                        <a href="">0948 158 888</a>
+                    </div>
+                    <div class="header-phone__callback">
+                        <a href="">Request a call</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="priceList">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="priceList-title">
+                        <h1>Price list</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="priceList-card">
+                        <div class="priceList-card__sex">
+                            <div class="sex-icon">
+                                <img src="img/like.svg" alt="">
+                            </div>
+                            <p>no sex</p>
+                        </div>
+                        <div class="priceList-card__item">
+                            <div class="row no-gutters">
+                                <div class="col-xl-12">
+                                    <p class="item-title">
+                                        Massage for Couple
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="row no-gutters">
+                                <div class="col-xl-3">
+                                    <p class="item-name">Tantra DE LUXE</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price">150€ / 60 MIN</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price">200€ / 90 MIN</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price">250€ / 120 MIN</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price"></p>
+                                </div>
+                            </div>
+                            <div class="row no-gutters">
+                                <div class="col-xl-3">
+                                    <p class="item-name">Mutual massage</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price">150€ / 60 MIN</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price">200€ / 90 MIN</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price"></p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price"></p>
+                                </div>
+                            </div>
+                            <div class="row no-gutters">
+                                <div class="col-xl-3">
+                                    <p class="item-name">WELLNESS massage</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price">240€ / 90 MIN</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price">290€ / 120 MIN</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price"></p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price"></p>
+                                </div>
+                            </div>
+                            <div class="row no-gutters">
+                                <div class="col-xl-3">
+                                    <p class="item-name">Pair massage - Tantra de luxe</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price">160€ / 60 MIN</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price">200€ / 90 MIN</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price"></p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price"></p>
+                                </div>
+                            </div>
+                            <div class="row no-gutters">
+                                <div class="col-xl-3">
+                                    <p class="item-name">Mutual /Nuru massage</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price">240€ / 60 MIN</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price">300€ / 90 MIN</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price"></p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price"></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="priceList-card__item">
+                            <div class="row no-gutters">
+                                <div class="col-xl-12">
+                                    <p class="item-title">
+                                        Massage for Couple
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="row no-gutters">
+                                <div class="col-xl-3">
+                                    <p class="item-name">Tantra DE LUXE</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price">150€ / 60 MIN</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price">200€ / 90 MIN</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price">250€ / 120 MIN</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price"></p>
+                                </div>
+                            </div>
+                            <div class="row no-gutters">
+                                <div class="col-xl-3">
+                                    <p class="item-name">Mutual massage</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price">150€ / 60 MIN</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price">200€ / 90 MIN</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price"></p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price"></p>
+                                </div>
+                            </div>
+                            <div class="row no-gutters">
+                                <div class="col-xl-3">
+                                    <p class="item-name">WELLNESS massage</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price">240€ / 90 MIN</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price">290€ / 120 MIN</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price"></p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price"></p>
+                                </div>
+                            </div>
+                            <div class="row no-gutters">
+                                <div class="col-xl-3">
+                                    <p class="item-name">Pair massage - Tantra de luxe</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price">160€ / 60 MIN</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price">200€ / 90 MIN</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price"></p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price"></p>
+                                </div>
+                            </div>
+                            <div class="row no-gutters">
+                                <div class="col-xl-3">
+                                    <p class="item-name">Mutual /Nuru massage</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price">240€ / 60 MIN</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price">300€ / 90 MIN</p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price"></p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <p class="item-price"></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-xl-3">
+                    <div class="footer-logo">
+                        <a href="">
+                            <img src="img/logo.png" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-xl-2">
+                    <div class="footer-street">
+                        <div class="street-marker">
+                            <img src="img/map.svg" alt="">
+                        </div>
+                        <div class="street-desc">
+                            <p>Klatovská 16<Br>
+                                Bratislava</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-2">
+                    <div class="footer-policy">
+                        <a href="">
+                            Privacy policy
+                        </a>
+                    </div>
+                </div>
+                <div class="col-xl-2">
+                    <div class="footer-phone">
+                        <div class="footer-phone__tel">
+                            <a href="">0948 158 888</a>
+                        </div>
+                        <div class="footer-phone__callback">
+                            <a href="">Request a call</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3">
+                    <div class="footer-callback">
+                        <a href="">
+                            <button>Visit us</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 </body>
 </html>
