--- a/index.html
+++ b/index.html
@@ -232,7 +232,15 @@
     <div class="team">
         <div class="container">
             <div class="row">
-                <div class="col-xl-4 offset-xl-1">
+                <div class="col-12 d-block d-lg-none">
+                    <div class="team-title">
+                        <h2>Tantra team</h2>
+                    </div>
+                    <div class="team-desc">
+                        <p>A good selection and professional massage create a great way to regenerate the body and muscles, as well as the soul and mind.</p>
+                    </div>
+                </div>
+                <div class="col-xl-4 offset-xl-1 col-8">
                     <div class="team-img">
                         <img src="img/img-team.png" alt="">
                         <div class="team-name">
@@ -240,7 +248,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-7">
+                <div class="col-xl-7 col-4 team-desktop">
                     <div class="team-title">
                         <h2>Tantra team</h2>
                     </div>
@@ -465,6 +473,20 @@
     <div class="apartments">
         <div class="container">
             <div class="row">
+                <div class="col-xl-12 d-block d-lg-none">
+                    <div class="apartments-content">
+                        <div class="content-title">
+                            <h2>Apartments</h2>
+                        </div>
+                        <div class="content-desc">
+                            <p>It is better to book in advance and just call one hour before the session to confirm your visit. However, this is not a condition; you can visit our shop spontaneously at our address.</p>
+                        </div>
+                        <div class="content-visit">
+                            <p class="title">You can visit us at:</p>
+                            <p class="street">Bodytouch salón Klatovská 16 </p>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-xl-6">
                     <div class="apartments-wrapper">
                         <div class="apartments-slider swiper-container">
@@ -503,7 +525,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-xl-6 apartments-desktop">
                     <div class="apartments-content">
                         <div class="content-title">
                             <h2>Apartments</h2>
@@ -558,14 +580,14 @@
     <div class="footer">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-12">
                     <div class="footer-logo">
                         <a href="">
                             <img src="img/logo.png" alt="">
                         </a>
                     </div>
                 </div>
-                <div class="col-xl-2">
+                <div class="col-xl-2 col-6">
                     <div class="footer-street">
                         <div class="street-marker">
                             <img src="img/map.svg" alt="">
@@ -576,14 +598,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-2">
+                <div class="col-xl-2 col-6">
                     <div class="footer-policy">
                         <a href="">
                             Privacy policy
                         </a>
                     </div>
                 </div>
-                <div class="col-xl-2">
+                <div class="col-xl-2 col-12">
                     <div class="footer-phone">
                         <div class="footer-phone__tel">
                             <a href="">0948 158 888</a>
@@ -593,7 +615,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-12">
                     <div class="footer-callback">
                         <a href="">
                             <button>Visit us</button>
