--- a/text.html
+++ b/text.html
@@ -26,12 +26,40 @@
     <div class="header">
     <div class="header-container">
         <div class="header-row">
-
+            <div class="header-menu header-menu-mob d-block d-lg-none">
+                <div class="header-menu__btn">
+                    <a href="">
+                        <img src="img/header-menu.svg" alt="">
+                    </a>
+                </div>
+                <div class="header-menu___content">
+                    <div class="menu-back">
+                        <a href=""><img src="img/header-menu-close.svg" alt=""></a>
+                    </div>
+                    <div class="menu-list">
+                        <nav>
+                            <a href="index.html" class="menu-list__link">Home</a>
+                            <a href="price.html" class="menu-list__link">Price list</a>
+                            <a href="massages.html" class="menu-list__link">Massages</a>
+                            <a href="contact.html" class="menu-list__link">Contact</a>
+                            <a href="#" class="menu-list__link">Tantra team</a>
+                            <a href="#" class="menu-list__link">Gallery</a>
+                        </nav>
+                    </div>
+                    <div class="menu-social">
+                        <a href="" class="social-link"><img src="img/instagram-white.svg" alt=""></a>
+                        <a href="" class="social-link"><img src="img/facebook-white.svg" alt=""></a>
+                    </div>
+                </div>
+            </div>
             <div class="header-logo">
-                <a href=""><img src="img/logo.png" alt="" class="header-logo__img"></a>
+                <a href="">
+                    <img src="img/logo.png" alt="" class="header-logo__img d-none d-md-block">
+                    <img src="img/logo-mobile.png" alt="" class="header-logo__img d-block d-md-none">
+                </a>
             </div>
 
-            <div class="header-menu">
+            <div class="header-menu header-menu_desktop">
                 <nav>
                     <a href="index.html" class="header-menu__link">Home</a>
                     <a href="price.html" class="header-menu__link">Price list</a>
@@ -106,19 +134,17 @@
         </div>
     </div>
 
-
-
     <div class="footer">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-12">
                     <div class="footer-logo">
                         <a href="">
                             <img src="img/logo.png" alt="">
                         </a>
                     </div>
                 </div>
-                <div class="col-xl-2">
+                <div class="col-xl-2 col-6">
                     <div class="footer-street">
                         <div class="street-marker">
                             <img src="img/map.svg" alt="">
@@ -129,14 +155,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-2">
+                <div class="col-xl-2 col-6">
                     <div class="footer-policy">
                         <a href="">
                             Privacy policy
                         </a>
                     </div>
                 </div>
-                <div class="col-xl-2">
+                <div class="col-xl-2 col-12">
                     <div class="footer-phone">
                         <div class="footer-phone__tel">
                             <a href="">0948 158 888</a>
@@ -146,7 +172,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-12">
                     <div class="footer-callback">
                         <a href="">
                             <button>Visit us</button>
